2012-12-31: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* ArchiveService.[h|m], ZipperInfo.plist, ZooArchive.[h|m]
	* Make Zoo archive extraction work, add service to create
	  zoo archives
	* FileInfo.m fix description method
	* ZooArchive.m Make creation of zoo archives work
	* RarArchive.m NSArray count returns NSUInteger, not int

2012-12-27: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* *Archive.m Archive.[h|m], new common.h, *Archive.[h|m],
	  ArchiveService.[h|m], GNUmakefile define and use typedef enum 
	  ArchiveType for the different archive types.
	* ZipperInfo.plist, ArchiveService.[h|m], service to create
	  tar, and .tar.xz archives
	* TarArchive.m, ArchiveService.m, use a NSRunAlertPanel instead
	  of NSLog to tell the user about problems.
	* PreferencesController.[h|m], Preferences.[h|m], 
	  Resouces/Preferences.gorm, start adding support for more archivers
	* ZooArchive.[h|m], AppDelegate.m, GNUmakefile initial support for 
	  ZOO archives

2012-12-24: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* ZipArchive.m remove a bogus check, and fix comment
	* ArchiveService.[h|m], ZipperInfo.plist, LhaArchive.[h|m]
	  Add creation of LHA Archives
	* SevenZipArchive.[h|m], ZipperInfo.plist, ArchiveService.[h|m]
	  Add creation of 7z Archives

2012-12-23: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* ArchiveService.[h|m], TarArchive.[h|m]
	* Allow creating of tar.gz and tar.bz2 archives
	* English.lproj/Preferences.nib, Resources/Preferences.gorm,
	  Preferences.[h|m], PreferencesController.[h|m],
	  ZipperInfo.plist
	  Also configure zip binary in Preferences in addition
	  to the unzip binary, and add Service to create zip files

2012-08-08 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* GzipArchive.m
	* LhaArchive.m
	* LzxArchive.m
	* RarArchive.m
	* SevenZipArchive.m
	* TarArchive.m
	* ZipArchive.m
	Protect filenames to be extracted to be counted as 
	parameters of the unzipping tools
