@@ -1,0 +1,11 @@
+#import <Foundation/NSObject.h>
+#import "Archive.h"
+
+@interface ArjArchive : Archive
+{
+}
+
+- (int)expandFiles:(NSArray *)files withPathInfo:(BOOL)usePathInfo toPath:(NSString *)path;
+- (NSArray *)listContents;
+
+@end
